--- a/01jdbc/pom.xml
+++ b/01jdbc/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>01mybatis</artifactId>
+    <artifactId>01jdbc</artifactId>
     <dependencies>
         <dependency>
             <groupId>mysql</groupId>
