--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>javatrace</artifactId>
     <version>1.5.0-SNAPSHOT</version>
     <modules>
-        <module>01mybatis</module>
+        <module>01jdbc</module>
     </modules>
     <name>java学习轨迹</name>
     <description>javatrace</description>
@@ -36,6 +36,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.10</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
         </dependency>
     </dependencies>
 
