--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,16 @@
     <artifactId>javatrace</artifactId>
     <version>1.5.0-SNAPSHOT</version>
     <modules>
-        <module>01jdbc</module>
+        <module>nuoy1_0datatrace</module>
     </modules>
     <name>java学习轨迹</name>
     <description>javatrace</description>
     <packaging>pom</packaging>
 
     <properties>
+        <!--maven打包 跳过测试-->
+        <maven.test.skip>true</maven.test.skip>
+
         <java.version>1.8</java.version>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
         <commons.lang.version>3.5</commons.lang.version>
