--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.5.0-SNAPSHOT</version>
     <modules>
         <module>nuoy1_0datatrace</module>
+        <module>nuoy2_designmodel</module>
     </modules>
     <name>java学习轨迹</name>
     <description>javatrace</description>
