--- a/nuoy1_0datatrace/nuoy1_2mybatis/pom.xml
+++ b/nuoy1_0datatrace/nuoy1_2mybatis/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.25</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.7.1</version><!--版本号可根据实际情况填写-->
+        </dependency>
     </dependencies>
     <build>
         <plugins>
