--- a/nuoy2_designmodel/nuoy2_3singleton/pom.xml
+++ b/nuoy2_designmodel/nuoy2_3singleton/pom.xml
@@ -3,19 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>javatrace</artifactId>
+        <artifactId>nuoy2_designmodel</artifactId>
         <groupId>com.nnstn.javatrace</groupId>
         <version>1.5.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <packaging>pom</packaging>
-    <modules>
-        <module>nuoy2_1proxy</module>
-        <module>nuoy2_2factory</module>
-        <module>nuoy2_3singleton</module>
-    </modules>
-    <artifactId>nuoy2_designmodel</artifactId>
+    <artifactId>nuoy2_3singleton</artifactId>
 
 
 </project>
