每日提交:策略模式+办公项目

--- a/nuoy0_office/src/main/resources/application.yml
+++ b/nuoy0_office/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8090
   servlet:
     context-path: /
 
@@ -7,9 +7,12 @@ spring:
   application:
     name: office
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/office
+    url: jdbc:mysql://127.0.0.1:3306/office?useSSL=false
     username: office
     password: office
+  jackson:
+    date-format: yyyy-MM-dd
+    time-zone: GMT+8
 
 mybatis:
   configuration:
