--- a/nuoy4_springcode/nuoy4_4spring_src/pom.xml
+++ b/nuoy4_springcode/nuoy4_4spring_src/pom.xml
@@ -3,20 +3,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>javatrace</artifactId>
+        <artifactId>nuoy4_springcode</artifactId>
         <groupId>com.nnstn.javatrace</groupId>
         <version>1.5.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>nuoy4_springcode</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>nuoy4_1spring_ioc</module>
-        <module>nuoy4_2spring_aop</module>
-        <module>nuoy4_3spring_mvc</module>
-        <module>nuoy4_4spring_src</module>
-    </modules>
+    <groupId>com.nnstn.javatrace</groupId>
+    <artifactId>nuoy4_4spring_src</artifactId>
+    <version>1.5.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.1.10.RELEASE</version>
+        </dependency>
 
+    </dependencies>
 </project>
